Add `elementOf` selector for targeting array/collection elements